read me + coverage dans le log de l'action